Fix validations workflow

--- a/.github/workflows/validations.yaml
+++ b/.github/workflows/validations.yaml
@@ -54,26 +54,4 @@ jobs:
         run: npm ci
 
       - name: Check compilation errors
-        run: npm run validate
-
-  lint:
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 15
-
-      - name: Cache dependencies
-        id: cache-dependencies
-        uses: actions/cache@v1
-        with:
-          path: node_modules
-          key: node_modules-${{ hashFiles('**/package-lock.json') }}
-
-      - name: Install dependencies
-        if: steps.cache-dependencies.outputs.cache-hit != 'true'
-        run: npm ci
-
-      - name: Check coding standard violations
-        run: npm run lint
+        run: tsc --noEmit
